[package]
name = "helloweb"
version = "0.0.3"
edition = "2024"
build = "build.rs"

[dependencies]
axum = "0.8.6"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
built = { version = "0.8.0", features = ["git2"] }
