[package]
name = "helloweb"
edition = "2024"
build = "build.rs"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
built = { version = "0.8.0", features = ["git2"] }
